fix: layout issue

--- a/_sass/cream/cream.scss
+++ b/_sass/cream/cream.scss
@@ -48,6 +48,8 @@ header {
     z-index: -100;
     background-color: #0a0c27;
     top: 0;
+    left: 0;
+    right: 0;
   }
 
   display: flex;
